--- a/Docker_Compose/LAMP/docker-compose.yml
+++ b/Docker_Compose/LAMP/docker-compose.yml
@@ -2,6 +2,8 @@ version: '3'
 services:
   mariadb:
     image: 'mariadb'
+    container_name: 'database'
+    hostname: 'mariadb'
     ports:
       - '3346:3306'
     environment: 
@@ -12,6 +14,8 @@ services:
       - 'data:/var/lib/mysql'
   apachephp:
     image: 'php:7.2-apache'
+    container_name: 'webserver'
+    hostname: 'apache'
     ports:
       - '9090:80'
     volumes: 
